[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/icons.png" type="Texture" id=1]
[ext_resource path="res://scripts/group.gd" type="Script" id=2]
[ext_resource path="res://textures/theme.png" type="Texture" id=3]
[ext_resource path="res://scripts/changable_label.gd" type="Script" id=4]

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 8, 8 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[node name="Control" type="Control"]
rect_min_size = Vector2( 200, 0 )

[node name="Node2D" type="Node2D" parent="."]

[node name="group" type="Panel" parent="Node2D"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 32 )
custom_styles/panel = SubResource( 3 )
script = ExtResource( 2 )

[node name="title" type="Label" parent="Node2D/group"]
anchor_right = 1.0
margin_bottom = 24.0
mouse_filter = 1
text = "group"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="LineEdit" type="LineEdit" parent="Node2D/group"]
visible = false
anchor_right = 1.0
align = 1

[node name="search" type="HBoxContainer" parent="Node2D/group"]
margin_left = 4.0
margin_top = 24.0
margin_right = 196.0
margin_bottom = 46.0

[node name="LineEdit" type="LineEdit" parent="Node2D/group/search"]
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="clear" type="TextureButton" parent="Node2D/group/search"]
margin_left = 156.0
margin_right = 172.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 2 )
expand = true
stretch_mode = 3

[node name="add" type="TextureButton" parent="Node2D/group/search"]
margin_left = 176.0
margin_right = 192.0
margin_bottom = 24.0
rect_min_size = Vector2( 16, 16 )
texture_normal = SubResource( 1 )
expand = true
stretch_mode = 3

[node name="items" type="VBoxContainer" parent="Node2D/group"]
margin_left = 2.0
margin_top = 52.0
margin_right = 198.0
margin_bottom = 104.0

[connection signal="resized" from="." to="Node2D/group" method="_on_Control_resized"]
[connection signal="focus_exited" from="Node2D/group/LineEdit" to="Node2D/group/title" method="_on_LineEdit_focus_exited"]
[connection signal="text_entered" from="Node2D/group/LineEdit" to="Node2D/group/title" method="_on_LineEdit_text_entered"]
[connection signal="text_changed" from="Node2D/group/search/LineEdit" to="Node2D/group" method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="Node2D/group/search/LineEdit" to="Node2D/group" method="_on_LineEdit_text_entered"]
[connection signal="button_down" from="Node2D/group/search/clear" to="Node2D/group/search" method="_on_clear_button_down"]
[connection signal="button_down" from="Node2D/group/search/add" to="Node2D/group/search" method="_on_add_button_down"]
